Fixed broken scrollbars/chat borders

--- a/import.css
+++ b/import.css
@@ -1,4 +1,4 @@
-:root{--version-number:"v3.7";--theme-name:"DECAY ";--theme-letter:"D";--main-color:#5502fa;--hover-color:#c1004e;--scroll-color:#5502fa;--noti-color:#057ddb}
+:root{--version-number:"v3.8";--theme-name:"DECAY ";--theme-letter:"D";--main-color:#5502fa;--hover-color:#c1004e;--scroll-color:#00FF6B;--noti-color:#057ddb}
 .membersWrap-2h-GB4:after{content:""var(--version-number);position:absolute;font-weight:500;right:0;bottom:1px;color:#f05;padding-right:4px;padding-left:2px;background-color:#19191b}
 .appMount-3VJmYg,.typeWindows-1za-n7{background-color:#121213!important;padding-top:4px;margin-top:0}
 .container-2lgZY8{background-color:#19191b}
@@ -43,6 +43,9 @@
 .theme-dark .search-2oPWTC .searchBar-3dMhjb{background-color:#19191b;border-color:#121213;box-shadow:0 0 2px 2px #121213}
 .search-2oPWTC.focused-31_ccS{box-sizing:border-box;border:4px solid var(--main-color);border-radius:5px}
 .theme-dark .children-19S4PO:after{visibility:hidden}
+.wrapper-3vR61M{background-color:#19191b!important}
+.wrapper-1F5TKx{background-color:#19191b!important}
+.chat-3bRxxu{background-color:#19191b;border-left:1px solid #121213}
 .messages-3amgkR{background-color:#19191b}
 .theme-dark .markup-2BOw-j code,.theme-dark .markup-2BOw-j code.inline,.theme-dark .markup-2BOw-j pre{background-color:#121213}
 .textAreaEdit-bNLDk3{background-color:#121213;border-radius:5px}
@@ -69,14 +72,14 @@
 .wrapper-2aW0bm{background-color:#121213;border:1px solid var(--main-color)}
 .button-1ZiXG9:hover{background-color:var(--hover-color)}
 .content-1o0f9g{background:#19191b}
-.theme-dark .content-yTz4x3{background-color:#121213}
 .actionRed-gYn8D3:hover,.theme-dark .lookOutlined-3sRXeN.colorPrimary-3b3xI6:hover{border-color:var(--hover-color);background-color:var(--hover-color)}
+.members-1998pB{border-left:1px solid #121213}
 .members-1998pB,.members-1998pB>div{background-color:#19191b;margin-right:1px}
 .theme-dark .membersGroup-v9BXpm{text-align:center;color:var(--main-color)}
 .theme-dark .member-3W1lQa.popout-open,.theme-dark .member-3W1lQa.popout-open:hover,.theme-dark .member-3W1lQa:hover{background-color:#121213}
 .scrollableContainer-2NUZem{background-color:#19191b;border-radius:2px}
 .form-2fGMdU:before{visibility:hidden}
-.form-2fGMdU{background-color:#19191b;border-top:1px solid #121213;border-right:1px solid #121213;border-left:1px solid #121213;padding-left:0;padding-right:0}
+.form-2fGMdU{background-color:#19191b;border-top:1px solid #121213;padding-left:0;padding-right:0}
 .base-gE7OpD{background-color:#121213;border-top-left-radius:5px;border-top-right-radius:5px;top:-22px;right:auto;height:22px;font-weight:400!important;padding-right:5px}
 .channelTextArea-rNsIhG{margin-bottom:8px;margin-top:8px}
 .buttons-3JBrkn.da-buttons>button{visibility:hidden}
@@ -145,8 +148,7 @@
 .theme-dark .searchBar-1MOL6S{background-color:#19191b}
 .scroller-305q3I{background-color:#121213}
 .contentRegion-3nDuYy{background-color:#121213}
-.newMessagesBar-mujexs,.theme-dark .jumpToPresentBar-9P20AM{background-color:var(--main-color)}
-.newMessagesBar-mujexs:hover,.theme-dark .jumpToPresentBar-9P20AM:hover{background-color:var(--hover-color)}
+.newMessagesBar-mujexs{background-color:var(--main-color)}
 .theme-dark .hasMore-3e72_v button{background-color:#19191b;color:#fff;border-color:var(--main-color)}
 .theme-dark .menu-Sp6bN1{background-color:#121213}
 .popout-2iWAc-{border-color:var(--main-color);border-style:solid;border-width:1px;height:inherit!important;width:inherit!important}
@@ -179,10 +181,10 @@
 .theme-dark .calendarPicker-2yf6Ci .react-datepicker__day.react-datepicker__day--selected:after{background-color:var(--main-color)}
 .theme-dark .calendarPicker-2yf6Ci .react-datepicker__day.react-datepicker__day--selected:hover,.theme-dark .calendarPicker-2yf6Ci .react-datepicker__day:hover{background-color:var(--hover-color)}
 .theme-dark .datePicker--XZbmJ .datePickerHint-3Q1Udw .hintValue-29ny8Z{background-color:var(--main-color)}
-.channelName-wvgELL,.searchResultsWrap-3-pOjs{background-color:#121213;box-shadow:none}
-.searchResult-2N9RV4:after,.searchResult-2N9RV4:before{background-image:none}
-.searchResultMessage-30QnSN.hit-1CXhXT{box-shadow:none;border-color:var(--main-color);border-style:solid 1px}
-.searchResultMessage-30QnSN.hit-1CXhXT{background-color:#19191b}
+.channelName-1JRO3C,.searchResultsWrap-3-pOjs{background-color:#121213;box-shadow:none}
+.searchResult-9tQ1uo:after,.searchResult-9tQ1uo:before{background-image:none}
+.searchResultMessage-1fxgXh.hit-1fVM9e{box-shadow:none;border-color:var(--main-color);border-style:solid 1px}
+.searchResultMessage-1fxgXh.hit-1fVM9e{background-color:#19191b}
 .theme-dark .autocomplete-1vrmpx{background-color:#121213!important}
 .theme-dark .selectorSelected-1_M1WV{background-color:var(--hover-color)}
 .theme-dark .description-11DmNu{color:#fff}
@@ -264,6 +266,7 @@
 .theme-dark .carouselRightGradientEdge-2Z3H8D{background-image:linear-gradient(270deg,#121213,rgba(54,57,63,0))!important}
 .theme-dark .tierBody-16Chc9{background-color:#19191b}
 .theme-dark .root-1gCeng{background-color:#19191b}
+.theme-dark{--scrollbar-auto-thumb:var(--scroll-color);--scrollbar-auto-track:transparent;--scrollbar-thin-thumb:var(--scroll-color);--scrollbar-thin-track:transparent;--scrollbar-auto-thumb:var(--scroll-color);--scrollbar-auto-track:transparent;--scrollbar-auto-scrollbar-color-thumb:var(--scroll-color);--scrollbar-auto-scrollbar-color-track:transparent}
 .theme-dark .scrollerThemed-2oenus.themeGhostHairline-DBD-2d .scroller-2FKFPG::-webkit-scrollbar-thumb{background-color:var(--scroll-color)}
 .scrollerThemed-2oenus.themeGhost-28MSn0 .scroller-2FKFPG::-webkit-scrollbar-thumb{background-color:var(--scroll-color);border:solid 4px transparent!important}
 .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track{background-color:transparent}
